1.5.2
Added 'Reload' to plugin prefs dialog.
Docview now automatically goes to page when 'Search In Docsets' only has one result.
Changed document plugin .info files to either show/not show in 'Find API' menu,
Changed document plugin .info files to either include/not include in all searches in 'Find API' menu,
Now holding 'CNTL' while selecting an item in the FavouritesPlugin menu will remove it from the menu.
Speed improvements for building docset.
Fixed annoying warnings from json language plugin.
Removed menu style option from prefs.
Added QT_ProxyStyle class.
Fixed storing current url of docviewer ( necessary for favourites plugin etc ).
Fixed scrollable menu inline css for qt6.
Cleaned up folders.
Added strip to install.
Renamed KKEditQTProgressBar to kkeditqtprogressbar.
Fixed makefile minor install errors.
Added tagreader helper.

1.5.1
Tidied up DocumentationPlugin menu.
Added run all searches menuitem to DocumentationPlugin ( WARNING run all on a common term like 'contains' can be time consuming ).
Plugin Prefs dialog now doesn't close on 'Apply'.
Updates to DocumentationPlugin actions.
'Search For Define' now uses ( caseless ) regex.
Speed updates to function definition search.
Fixed setting back history when seleecting from combobox in Select Definition dialog.
Don't auto select 1st item from combobox in Select Definition dialog.
Made Select Definition dialog non modal.
Set OK button focus on Select Definition dialog
Fixed restoring autosave session from cli ( use:kkeditqt -r "autosave" ).
Improvments to search for define toolbar box.
Removed need for two pass build.
Forced use docset options when building docs ( needed for Tokens.xml file ).
Redone search in documentation.
Added MakeDocSet to resources.
Added build docset to file menu.
Use two passes for doxygen for extra data for offline search.
Updated doxygen config for docsets.
Fixed building pole with wrong version of QT.
Added "Raise docviewer" menuitem to "View" menu.